@@ -1,5 +1,6 @@
 package com.pawsitive.auth.jwt;
 
+import com.pawsitive.auth.exception.JwtAuthenticationProcessingException;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
@@ -12,6 +13,7 @@ import java.security.Key;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -23,30 +25,38 @@ import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
+/**
+ * JWT Token 관련 기능을 제공하는 클래스입니다.
+ *
+ * @author 천세진
+ * @since 1.0
+ */
 @Slf4j
 @Component
 public class JwtTokenProvider {
 
     private final Key key;
-
-    // application.properties에 선언된 비밀 키 값 가져와서 key에 저장
+    
     public JwtTokenProvider(@Value("${jwt.secret}") String secretKey) {
         byte[] keyBytes = Decoders.BASE64.decode(secretKey);
         this.key = Keys.hmacShaKeyFor(keyBytes);
     }
 
-    // 유저 정보를
+    /**
+     * 인증 객체를 통해 인증한 뒤, JWT Token을 생성하는 메서드입니다.
+     *
+     * @param authentication 인증 정보 객체
+     * @return JwtToken 객체
+     */
     public JwtToken generateToken(Authentication authentication) {
 
         // 권한 가져오기
         String authorities = authentication.getAuthorities().stream()
-            .map(GrantedAuthority::getAuthority)
-            .collect(Collectors.joining(","));
+            .map(GrantedAuthority::getAuthority).collect(Collectors.joining(","));
 
         long now = new Date().getTime();
 
         Date accessTokenExpires = new Date(now + 1000 * 60 * 60); // 1시간
-//        LocalDateTime accessTokenExpires = LocalDateTime.now().plusHours(1); // 1시간
 
         // accessToken 생성
         String accessToken = Jwts.builder()
@@ -70,26 +80,36 @@ public class JwtTokenProvider {
 
     }
 
+    /**
+     * Access Token을 통해 Authentication 정보를 가져오는 메서드입니다.
+     *
+     * @param accessToken Jwt Access Token
+     * @return 인증 객체
+     */
     public Authentication getAuthentication(String accessToken) {
         Claims claims = parseClaims(accessToken);
 
-        if (claims.get("auth") == null) {
-            // TODO : 나중에 별도 Exception 클래스 정의해서 바꾸기
-            throw new RuntimeException("권한 정보가 없는 토큰입니다.");
+        if (Objects.isNull(claims.get("auth"))) {
+            throw new JwtAuthenticationProcessingException("권한 정보가 없는 토큰입니다.");
         }
 
         // Claim에서 권한 정보 가져오기
         Collection<? extends GrantedAuthority> authorities =
             Arrays.stream(claims.get("auth").toString().split(","))
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
 
         // UserDetails 객체를 만들어서 Authentication return
         UserDetails principal = new User(claims.getSubject(), "", authorities);
         return new UsernamePasswordAuthenticationToken(principal, "", authorities);
     }
 
-    // 토큰 정보를 검증하는 메서드
+    /**
+     * Token 정보를 검증하는 메서드입니다.
+     *
+     * @param token Jwt 토큰
+     * @return 토큰이 유효하다면 true, 유효하지 않다면 false
+     */
     public boolean validateToken(String token) {
         try {
             Jwts.parserBuilder()
